--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "license": "GPL-2.0+",
     "require": {
+        "php": "^7.1",
         "psr/container": "^1.0",
         "container-interop/service-provider": "~0.4.0"
     },
