--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,10 @@
     "require-dev": {
         "phpunit/phpunit": "^6.5 || ^7.0",
         "phpspec/prophecy": "^1.7",
-        "php-coveralls/php-coveralls": "^2.0"
+        "php-coveralls/php-coveralls": "^2.0",
+        "phpstan/phpstan": "^0.11.1",
+        "phpstan/phpstan-strict-rules": "^0.11.0",
+        "phpstan/phpstan-phpunit": "^0.11.0",
+        "jangregor/phpstan-prophecy": "^0.3.0"
     }
 }
