--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "license": "GPL-2.0+",
     "require": {
-        "php": "^7.0",
+        "php": "^7.0 || ^8.0",
         "psr/container": "^1.0",
         "container-interop/service-provider": "~0.4.0"
     },
@@ -33,14 +33,14 @@
         }
     },
     "require-dev": {
-        "php": "^7.1",
-        "phpunit/phpunit": "^6.5 || ^7.0",
+        "php": "^7.1 || ^8.0",
+        "phpunit/phpunit": "^6.5 || ^7.0 || ^8.0",
         "phpspec/prophecy": "^1.7",
         "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.11.1",
-        "phpstan/phpstan-strict-rules": "^0.11.0",
-        "phpstan/phpstan-phpunit": "^0.11.0",
-        "jangregor/phpstan-prophecy": "^0.3.0",
+        "phpstan/phpstan": "^0.11.1 || ^1.0",
+        "phpstan/phpstan-strict-rules": "^0.11.0 || ^1.0",
+        "phpstan/phpstan-phpunit": "^0.11.0 || ^1.0",
+        "jangregor/phpstan-prophecy": "^0.3.0 || ^1.0",
         "squizlabs/php_codesniffer": "^3.4"
     }
 }
