Resolve phpstan errors

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,6 +6,10 @@ includes:
 parameters:
   level: max
 
+  ignoreErrors:
+    -
+      identifier: missingType.iterableValue
+
   paths:
     - src
     - tests
