--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
             "homepage": "https://bnfr.net"
         }
     ],
-    "license": "GPL-2.0+",
+    "license": "GPL-2.0-or-later",
     "require": {
-        "php": "^7.0 || ^8.0",
+        "php": "^7.1 || ^8.0",
         "psr/container": "^1.0",
         "container-interop/service-provider": "~0.4.0"
     },
@@ -33,7 +33,6 @@
         }
     },
     "require-dev": {
-        "php": "^7.1 || ^8.0",
         "phpunit/phpunit": "^6.5 || ^7.0 || ^8.0",
         "phpspec/prophecy": "^1.7",
         "php-coveralls/php-coveralls": "^2.0",
